manifests/hetzner/discourse/service-discourse.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: discourse-discourse
spec:
  selector:
    app: discourse-discourse
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
