manifests/hetzner/discourse/service-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: discourse-postgres
spec:
  clusterIP: None
  selector:
    app: discourse-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
