manifests/hetzner/discourse/service-valkey.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: discourse-valkey
spec:
  clusterIP: None
  selector:
    app: discourse-valkey
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
