manifests/hetzner/discourse/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: discourse
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 8443
    protocol: HTTPS
    hostname: community.techwerkers.nl
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: discourse-tls
        namespace: discourse
