manifests/hetzner/discourse/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: discourse
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: discourse
  hostnames:
  - community.techwerkers.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: discourse-discourse
      port: 80
      weight: 1
